-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.12.4
-
None
-
2ca4010f2dd5e18aa2a68cbf5d56b9eea8458420 (qt-creator/qt-creator/4.13)
Hi, Qt Creator doesn't work with the Go language server (gopls), started in per-project mode. gopls dies with the following message and a stacktrace:
panic: only file URIs are supported, got "" from "/home/user/foo"
Just looking at the debugging output, two things appear to be off:
{{{{"workSpaceFolders":[
{"name":"haven","uri":"/home/user/foo"}]}}}}
First, "workSpaceFolders" should probably be "workspaceFolders", see https://microsoft.github.io/language-server-protocol/specification.html although it doesn't seem to be the cause of this failure.
Second, the URI is not a URI and should be prefixed by file://, giving:
{{{{"workspaceFolders":[
{"name":"haven","uri":"file:///home/user/foo"}]}}}}
The latter should be an easy and straight-forward fix. Thanks.
Note that there are more problems with gopls, this is just the first one I bothered to investigate.
For Gerrit Dashboard: QTCREATORBUG-24452 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
310048,2 | LSP: fix capitalization of workspaceFolders | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
310049,2 | LSP: use DocumentUri as workspaceFolder | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |