LSP: fix capitalization of workspaceFolders

Task-number: QTCREATORBUG-24452
Change-Id: I6ab042972314de45d98034c361b7a11f8fa0024b
Reviewed-by: Eike Ziller <eike.ziller@qt.io>